# ccp-website

./: .gitignore  Cargo.toml  Dockerfile  README.md  buildgamestatic.sh  cloudbuild.yaml  deploy.yaml  gamefile-deploy.yaml  gamefile-service.yaml  gamefinder-deploy.yaml  runeverything.sh  rungamefinder.sh  rungamestatic.sh  service.yaml  testbuilder.sh  webless-wasm-builder.sh
chesscheckersgame_static/: Dockerfile  deploy.yaml  gamesession.js  service.yaml
chesscheckersgame_static/wasmfiles/: wasm_builder.js  wasm_builder_bg.wasm
gamefinder_static/: Dockerfile  cloudbuild.yaml  deploy.yaml  index.html  script.js  service.yaml
src/: main.rs
static/chesscheckersgame_static/: gamesession.js  index.html
static/chesscheckersgame_static/effectcards/: effect_e_and_c.xcf  info.txt
static/gamefinder_static/: index.html  script.js
wasm_builder/: Cargo.toml
wasm_builder/src/: appearancestate.rs  lib.rs
wasm_builder/src/gameinterface/: appearancestate.rs  mod.rs
