[package]
name = "wasm_builder"
version = "0.1.0"
authors = ["gucci"]
edition = "2018"
#wasm-opt = "false"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


physicsengine = { git = "https://github.com/guccialex/ccp-game/", branch = "main" }

#for testing, the source above is for deploying


#physicsengine = { path = "../../ccp-game" }


wasm-bindgen = { version = "*", features = ["serde-serialize"] }

serde = { version = "*", features = ["derive"] }


console_error_panic_hook = "0.1.6"


[lib]
crate-type = ["cdylib"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[profile.release]
#panic = "unwind"