[package]
name = "wasm_builder"
version = "0.1.0"
authors = ["gucci"]
edition = "2018"
#wasm-opt = "false"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


physicsengine = { git = "https://github.com/guccialex/ccp-game/", branch = "main" }

#for testing, the source above is for deploying

#physicsengine = { path = "../../ccp-game" }

#0.2.71
wasm-bindgen = { version = "0.2.71", features = ["serde-serialize"] }

#1.0.123
serde = { version = "1.0.123", features = ["derive"] }


console_error_panic_hook = "0.1.6"


[lib]
crate-type = ["cdylib"]


[profile.release]
debug = true